fix(spaceward): added css class to remove scrollbar (#37)
* fix(spaceward): added css class to remove sidebar

* fix(spaceward): added css class to remove sidebar

---------

--- a/spaceward/src/main.css
+++ b/spaceward/src/main.css
@@ -147,3 +147,19 @@
   white-space: nowrap;
 
 }
+
+@layer utilities {
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
+}
